general syntax updates

--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
         "hightlight",
         "theme",
         "customization"
-    ]
+    ],
+    "dependencies": {
+        "@vscode/vsce": "^2.16.0"
+    }
 }
